fix bug where grid layers show hide logic was using wrong size value

--- a/src/components/Explorer/Map/styles.scss
+++ b/src/components/Explorer/Map/styles.scss
@@ -152,6 +152,7 @@
     &.active {
       color: $color-kett-gold;
     }
+    .id,
     .recnumber {
       display: none;
     }
